ros2_ws/log/build_2026-02-21_03-30-35/my_first_pkg/stderr.log
  File "/home/ahyildir/ros2_ws/install/my_first_pkg/lib/python3.10/site-packages/my_first_pkg/motor_sim_node.py", line 11
    self depth_pub = self.create_publisher(Float32, '/depth/data', 10)
         ^^^^^^^^^
SyntaxError: invalid syntax

